# gperf

./: CMakeLists.txt  gperf-config.cmake.in
cmake/: FindHelp2man.cmake  FindTexinfo.cmake
src/: config.h.cmake.in
